# Tseitin-Spectral-Complexity

./: .gitignore  LICENSE  README.md  requirements.txt  results_n80_d4.csv  results_n80_d4_s0_49.csv  sweep_kissat.py
code/: main_experiment.py
code/cpp/: CMakeLists.txt  solver_config.ini
code/cpp/include/: graph.hpp  kissat_runner.hpp  tseitin_cnf.hpp
code/cpp/src/: graph.cpp  kissat_runner.cpp  main.cpp  run_kissat.cpp  tseitin_cnf.cpp
code/python/: plot_kissat.py  plot_ws_multiseed.py  sweep_kissat.py
report/: 202511270054_amorin_minimal_proof_compression.tex  202602071952_amorin_minimal_proof_compression.tex  202602080954_amorin_minimal_proof_compression.tex  202603211618_amorin_minimal_proof_compression.tex  20260410_amorin_tseitin_structural_transitions.tex
scripts/: analytics.sh  build_cpp.sh  draw_graph.py  experiment_ws_multiseed.sh  experiment_ws_sweep.sh  sweep_n80_d4.sh  sweep_ws_n80_d4.sh  sweep_ws_n80_d4_minisat  test_d0_equivalence.sh
